--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,7 +22,7 @@ and open the template in the editor.
                         <div class="col-md-3 logo">
                             <img src="assets/images/Main-page_03.png" alt="logo"/>
                         </div>
-                        <div class="col-md-5 searcher">
+                        <div class="col-md-5 col-sm-12 searcher">
                             <form>
                                 <input type="text" placeholder="Search Psychics / Services" class="fa fa-search">
                                 <a href="#" class="icon">
@@ -30,11 +30,19 @@ and open the template in the editor.
                                 </a>
                             </form>
                         </div>
-                        <div class="col-md-4 searcher">
+                        <div class="col-md-4 col-sm-12 searcher">
                             <div class="header-menu">
-                                <a href="#">Register</a>
-                                <a href="#">Sign in</a>
-                                <a href="#" class="button">Join as Psychic</a>
+                                <ul class="d-flex  flex-wrap">
+                                    <li>
+                                        <a href="#">Register</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Sign in</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="button">Join as Psychic</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -106,25 +114,25 @@ and open the template in the editor.
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-3 image">
+                        <div class="col-lg-3 col-md-6 col-sm-12 image">
                             <p>Sms reading</p>
                             <figure>
                                 <img src="assets/images/topimages_16.jpg" alt=""/>
                             </figure>
                         </div>
-                        <div class="col-md-3 image">
+                        <div class="col-lg-3 col-md-6 col-sm-12 image">
                             <p>phone reading</p>
                             <figure>
                                 <img src="assets/images/topimages_18.jpg" alt=""/>
                             </figure>
                         </div>
-                        <div class="col-md-3 image">
+                        <div class="col-lg-3 col-md-6 col-sm-12 image">
                             <p>email reading</p>
                             <figure>
                                 <img src="assets/images/topimages_13.jpg" alt=""/>
                             </figure>
                         </div>
-                        <div class="col-md-3 image">
+                        <div class="col-lg-3 col-md-6 col-sm-12 image">
                             <p>life coacher</p>
                             <figure>
                                 <img src="assets/images/topimages_21.png" alt=""/>
@@ -143,7 +151,7 @@ and open the template in the editor.
                             </hgroup>
                         </div>
                     </div>
-                    <div class="d-flex  justify-content-around">
+                    <div class="d-flex  justify-content-around flex-wrap">
                         <div class="box-item image">
                             <p class="name">namaste</p>
                             <figure>
@@ -383,7 +391,7 @@ and open the template in the editor.
                             </hgroup>
                         </div>
                     </div>
-                    <div class="d-flex  justify-content-around">
+                    <div class="d-flex  justify-content-around flex-wrap">
                         <div class="box-item image">
                             <p class="name">namaste</p>
                             <figure>
@@ -617,8 +625,124 @@ and open the template in the editor.
                     </div>
                 </div>
             </section>
+            <aside class="articles-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 header-group">
+                            <hgroup>
+                                <h2>Our Featured psychics</h2>
+                                <h4>Chose from our Most Popular Psychics Services</h4>
+                            </hgroup>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 article">
+                            <figure>
+                                <img src="assets/images/bottom-big-images_45.jpg" alt="article"/>
+                            </figure>
+                            <div  class="description">
+                                <h4>Your Weekly Love Horoscope: flirtation</h4>
+                                <p class="desc">
+                                    Inteliectual conversations, flirtations and fickle nesc mix
+                                    with passion and drama this week as your love
+                                    horoscope. Your deeprest emotions shine throught.
+                                </p>
+                                <p class="date">December 19, 2016</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 article">
+                            <figure>
+                                <img src="assets/images/bottom-big-images_47.png" alt="article"/>
+                            </figure>
+                            <div  class="description">
+                                <h4>Your Weekly Love Horoscope: flirtation</h4>
+                                <p class="desc">
+                                    Inteliectual conversations, flirtations and fickle nesc mix
+                                    with passion and drama this week as your love
+                                    horoscope. Your deeprest emotions shine throught.
+                                </p>
+                                <p class="date">December 19, 2016</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 article">
+                            <figure>
+                                <img src="assets/images/bottom-big-images_49.jpg" alt="article"/>
+                            </figure>
+                            <div  class="description">
+                                <h4>Your Weekly Love Horoscope: flirtation</h4>
+                                <p class="desc">
+                                    Inteliectual conversations, flirtations and fickle nesc mix
+                                    with passion and drama this week as your love
+                                    horoscope. Your deeprest emotions shine throught.
+                                </p>
+                                <p class="date">December 19, 2016</p>
+                            </div>
+                        </div>
+                    </div>
+            </aside>
+            <aside class="sponsors">
+                <div class="container">
+                    <div class="row">
+                        <div class="offset-md-4 col-md-4">
+                            <ul class="d-flex justify-content-around">
+                                <li>
+                                    <img src="assets/images/footer-logos_03.jpg" alt=""/>
+                                </li>
+                                <li>
+                                    <img src="assets/images/footer-logos_05.jpg" alt=""/>
+                                </li>
+                                <li>
+                                    <img src="assets/images/footer-logos_07.jpg" alt=""/>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </aside>
         </main>
-        <footer>
+        <footer class="container-fluid hidden-sm-down">
+            <div class="top-footer">
+                <div class="container">
+                    <div class="row ">
+                        <div class="col-md-10">
+                            <ul class="d-flex flex-wrap justify-content-around footer-menu">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Register now</a></li>
+                                <li><a href="#">Login</a></li>
+                                <li><a href="#">Customer Service</a></li>
+                                <li><a href="#">Afiliate Program</a></li>
+                                <li><a href="#">Eploment</a></li>
+                                <li><a href="#">Disclaimer</a></li>
+                                <li><a href="#">Refund policy</a></li>
+                                <li><a href="#">Private Policy</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-2">
+                            <ul class="d-flex justify-content-around footer-menu">
+                                <li>
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </li>
+                                <li>
+                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                </li>
+                                <li>
+                                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                                </li>
+                                <li>
+                                    <i class="fa fa-google-plus" aria-hidden="true"></i>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container footer-logos">
+                <div class="row ">
+                    <div class="col-md-12">
+                        <img src="assets/images/footer-logos_13.png" alt=""/>
+                    </div>
+                </div>
+            </div>
         </footer>
         <script src="//code.jquery.com/jquery-3.1.1.slim.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
