--- a/public_html/index.html
+++ b/public_html/index.html
@@ -114,25 +114,25 @@ and open the template in the editor.
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-3 col-md-6 col-sm-12 image">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
                             <p>Sms reading</p>
                             <figure>
                                 <img src="assets/images/topimages_16.jpg" alt=""/>
                             </figure>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 image">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
                             <p>phone reading</p>
                             <figure>
                                 <img src="assets/images/topimages_18.jpg" alt=""/>
                             </figure>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 image">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
                             <p>email reading</p>
                             <figure>
                                 <img src="assets/images/topimages_13.jpg" alt=""/>
                             </figure>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 image">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
                             <p>life coacher</p>
                             <figure>
                                 <img src="assets/images/topimages_21.png" alt=""/>
@@ -151,7 +151,7 @@ and open the template in the editor.
                             </hgroup>
                         </div>
                     </div>
-                    <div class="d-flex  justify-content-around flex-wrap">
+                    <div class="d-flex justify-content-center  flex-wrap">
                         <div class="box-item image">
                             <p class="name">namaste</p>
                             <figure>
@@ -391,7 +391,7 @@ and open the template in the editor.
                             </hgroup>
                         </div>
                     </div>
-                    <div class="d-flex  justify-content-around flex-wrap">
+                    <div class="d-flex  justify-content-center flex-wrap">
                         <div class="box-item image">
                             <p class="name">namaste</p>
                             <figure>
